Fixing methods to not expose customers CPF